--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="create_person">Создать свой персонаж</string>
     <string name="new_game">Новая игра</string>
     <string name="skip">Пропустить</string>
+    <string name="start_game">Начать игру</string>
 
     <string-array name="array_beginning">
         <item>В этом приключении все, как в книгах-играх, но с одним отличием: в нем нет случайности. Выживете вы или умрете — зависит от Ваших решений, а не от броска кубика.</item>
